--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a name="cast"></a><div class="container people">
                 <div class="people">
                     <div class="cast_menu">
-                        <div class="actors">Актеры</div>
+                        <div class="actors btn_per_active">Актеры</div>
                         <div class="creators">Создатели</div>
                     </div>
                     <div class="persons_act pers_active">
@@ -128,59 +128,59 @@
                     </div>
                     <div class="persons_cre">
                         <div class="prsn">
-                            <img class="p_img" src="img/tan.png" alt="">
+                            <img class="p_img" src="img/simon.png" alt="" width="100" height="100">
                             <div class="">
-                                <p class="rus">Льюис Тан</p>
-                                <p class="eng">Lewis Tan</p>
+                                <p class="rus">Саймон Маккуойд</p>
+                                <p class="eng">Simon McQuoid</p>
                             </div>
                         </div>
                         <div class="prsn">
-                            <img class="p_img" src="img/taslim.png" alt="">
+                            <img class="p_img" src="img/greg.png" alt="" width="100" height="100">
                             <div class="">
-                                <p class="rus">Джо Таслим</p>
-                                <p class="eng">Joe Taslim</p>
+                                <p class="rus">Грег Руссо</p>
+                                <p class="eng">Greg Russo</p>
                             </div>
                         </div>
                         <div class="prsn">
-                            <img class="p_img" src="img/namee.png" alt="">
+                            <img class="p_img" src="img/dave.png" alt="" width="100" height="100">
                             <div class="">
-                                <p class="rus">Джессика МакНэми</p>
-                                <p class="eng">Jessica McNamee</p>
+                                <p class="rus">Дэйв Каллахэм</p>
+                                <p class="eng">Dave Callaham</p>
                             </div>
                         </div>
                         <div class="prsn">
-                            <img class="p_img" src="img/sanada.png" alt="">
+                            <img class="p_img" src="img/ed.png" alt="" width="100" height="100">
                             <div class="">
-                                <p class="rus">Хироюки Санада</p>
-                                <p class="eng">Hiroyuki Sanada</p>
+                                <p class="rus">Эд Бун</p>
+                                <p class="eng">Ed Boon</p>
                             </div>
                         </div>
                         <div class="prsn">
-                            <img class="p_img" src="img/lawson.png" alt="">
+                            <img class="p_img" src="img/john.png" alt="" width="100" height="100">
                             <div class="">
-                                <p class="rus">Джош Лоусон</p>
-                                <p class="eng">Josh Lawson</p>
+                                <p class="rus">Джон Тобиас</p>
+                                <p class="eng">John Tobias</p>
                             </div>
                         </div>
                         <div class="prsn">
-                            <img class="p_img" src="img/asano.png" alt="">
+                            <img class="p_img" src="img/oren.png" alt="" width="100" height="100">
                             <div class="">
-                                <p class="rus">Таданобу Асано</p>
-                                <p class="eng">Tadanobu Asano</p>
+                                <p class="rus">Орен Узил</p>
+                                <p class="eng">Oren Uziel</p>
                             </div>
                         </div>
                         <div class="prsn">
-                            <img class="p_img" src="img/lin.png" alt="">
+                            <img class="p_img" src="img/james.png" alt="" width="100" height="100">
                             <div class="">
-                                <p class="rus">Луди Линь</p>
-                                <p class="eng">Ludi Lin</p>
+                                <p class="rus">Джеймс Ван</p>
+                                <p class="eng">James Wan</p>
                             </div>
                         </div>
                         <div class="prsn">
-                            <img class="p_img" src="img/han.png" alt="">
+                            <img class="p_img" src="img/djer.png" alt="" width="100" height="100">
                             <div class="">
-                                <p class="rus">Чинь Хань</p>
-                                <p class="eng">Chin Han</p>
+                                <p class="rus">Джермейн МакМикинг</p>
+                                <p class="eng">Germain McMicking</p>
                             </div>
                         </div>
                     </div>
@@ -232,5 +232,10 @@
             </div>
         </footer>
     </main>
+
+
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
