--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
                         <a class="link" href="#cast">Актеры</a>
                         <a class="link" href="#news">Новости</a>
                     </div>
+                    <div class="burger">
+                        <p class="line"></p>
+                        <p class="line"></p>
+                        <p class="line"></p>
+                    </div>
+                    <div class="burger-menu">
+                        <div class="burger-menu-heder">
+                            <span class="material-icons-outlined">
+                                <img src="img/1x/outline_arrow_upward_black_24dp.png" alt="">
+                            </span>
+                        </div>
+                        <div class="burger-menu-text">
+                            <a class="link" href="#film">О фильме</a>
+                            <a class="link" href="#cast">Актеры</a>
+                            <a class="link" href="#news">Новости</a>
+                            <p class="text-menu border"></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
